--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -85,16 +85,7 @@
           </script>
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/smk-homepage.jpg" alt="Tampilan Beranda Website SMK Al-Manar">
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/portfolio/smk-news.jpg" alt="Halaman Berita Sekolah">
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/portfolio/smk-gallery.jpg" alt="Galeri Kegiatan Sekolah">
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/portfolio/smk-mobile.jpg" alt="Tampilan Mobile Responsive">
+              <img src="assets/img/portfolio/websekolah.jpg" alt="Tampilan Beranda Website SMK Al-Manar">
             </div>
           </div>
           <div class="swiper-button-prev"></div>
@@ -170,9 +161,8 @@
       <h3 class="sitename">Raden Ahmad Nashieh Hamied</h3>
       <p>Web Developer &amp; Data Analyst profesional dengan pengalaman di berbagai proyek IT.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="#" aria-label="Twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+ <a href="https://wa.me/6281318984223" aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
+              
         <a href="https://www.linkedin.com/in/raden-ahmad-nashieh-hamied-b9352916b" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
