--- a/cisco.html
+++ b/cisco.html
@@ -85,13 +85,7 @@
           </script>
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/cisco-cert.jpg" alt="Sertifikat Cisco Network Security">
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/portfolio/cisco-lab.jpg" alt="Praktikum Jaringan Cisco">
-            </div>
-            <div class="swiper-slide">
-              <img src="assets/img/portfolio/network-security.jpg" alt="Konsep Network Security">
+              <img src="assets/img/portfolio/cisco1.jpg" alt="Sertifikat Cisco Network Security">
             </div>
           </div>
           <div class="swiper-button-prev"></div>
@@ -202,9 +196,8 @@
       <h3 class="sitename">Raden Ahmad Nashieh Hamied</h3>
       <p>Web Developer &amp; Data Analyst profesional dengan pengalaman di berbagai proyek IT.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="#" aria-label="Twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+ <a href="https://wa.me/6281318984223" aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
+              
         <a href="https://www.linkedin.com/in/raden-ahmad-nashieh-hamied-b9352916b" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
