--- a/dataanalis.html
+++ b/dataanalis.html
@@ -233,9 +233,8 @@
       <h3 class="sitename">Raden Ahmad Nashieh Hamied</h3>
       <p>Web Developer &amp; Data Analyst profesional dengan pengalaman di berbagai proyek IT.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="#" aria-label="Twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+ <a href="https://wa.me/6281318984223" aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
+              
         <a href="https://www.linkedin.com/in/raden-ahmad-nashieh-hamied-b9352916b" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
