--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -98,21 +98,8 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/app-1.jpg" alt="">
+              <img src="assets/img/portfolio/perpus.jpg" alt="">
             </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/portfolio/product-1.jpg" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/portfolio/branding-1.jpg" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/portfolio/books-1.jpg" alt="">
-            </div>
-
           </div>
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
@@ -179,9 +166,8 @@
       <h3 class="sitename">Raden Ahmad Nashieh Hamied</h3>
       <p>Web Developer &amp; Data Analyst profesional dengan pengalaman di berbagai proyek IT.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href="#" aria-label="Twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
+ <a href="https://wa.me/6281318984223" aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
+              
         <a href="https://www.linkedin.com/in/raden-ahmad-nashieh-hamied-b9352916b" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="container">
